atualização e script das fazes

--- a/fimdejogo.html
+++ b/fimdejogo.html
@@ -14,22 +14,8 @@
     <header class="tituloprincipal">
         <h1>Os tesouros do Faraó Ptolomeu</h1>
     </header>
-    <main>
-        <div class="textodirecionador">
-            <h2>Na esfinge</h2>
-            <p>Na esfinge você encontra uma inscrição em hieróglifos que diz:<br>
-                <em>“no obelisco de Luxor repousa a resposta”</em>
-        </div>
-        <div class="alternativas">
-            <h3>Qual templo devemos ir?</h3>
-            
-            <p>1 - Templo de Karnak </p>
-            <p>2 - Templo de Luxor</p>
-        </div>
-        <div class="resposta">
-            <button onclick="responder()" class="botao-resposta">Responder</button>
-        </div>
-        <script src="./scriptp3f3.js"></script>
+    <main class="fimdejogo">
+       <p class="vencedor">Parabéns Você ganhou e descobriu o tesouro do Faraó Ptolomeu</p>          
     </main>
     <footer class="rodape">
         <p class="creditos">Projeto Final Módulo 1 - Desenvolvido por Fabiano B. Oliveira 2021</p>
