--- a/p1f4.html
+++ b/p1f4.html
@@ -30,10 +30,10 @@
         <div class="resposta">
             <button onclick="responder()" class="botao-resposta">Responder</button>
         </div>
-   
+        <script src="./scriptp1f4.js"></script>
     </main>
-    <footer>
-        <p>Projeto Final Módulo 1 - Desenvolvido por Fabiano B. Oliveira 2021</p>
+    <footer class="rodape">
+        <p class="creditos">Projeto Final Módulo 1 - Desenvolvido por Fabiano B. Oliveira 2021</p>
     </footer>
 </body>
 </html>
