--- a/p2f1.html
+++ b/p2f1.html
@@ -29,10 +29,10 @@
         <div class="resposta">
             <button onclick="responder()" class="botao-resposta">Responder</button>
         </div>
-   
+        <script src="./scriptp2f1.js"></script>
     </main>
-    <footer>
-        <p>Projeto Final Módulo 1 - Desenvolvido por Fabiano B. Oliveira 2021</p>
+    <footer class="rodapeinicial">
+        <p class="creditos">Projeto Final Módulo 1 - Desenvolvido por Fabiano B. Oliveira 2021</p>
     </footer>
 </body>
 </html>
