colocando link para a home

--- a/aberturaindex.html
+++ b/aberturaindex.html
@@ -31,8 +31,8 @@
             
         </div>
     </main>
-    <footer>
-        <p>Projeto Final Módulo 1 - Desenvolvido por Fabiano B. Oliveira 2021</p>
+    <footer class="rodape-abertura">
+        <p class="creditos">Projeto Final Módulo 1 - Desenvolvido por Fabiano B. Oliveira 2021</p>
     </footer>
 </body>
 </html>
