--- a/gameover.html
+++ b/gameover.html
@@ -19,6 +19,7 @@
     </main>
     <footer class="rodape">
         <p class="creditos">Projeto Final Módulo 1 - Desenvolvido por Fabiano B. Oliveira 2021</p>
+        <a href="./aberturaindex.html"><p>Início</p></a>
     </footer>
 </body>
 </html>
